<!-- Portrait orientation only -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/pc_view_outer_padding"
    tools:context=".PcView">

    <LinearLayout
        android:id="@+id/actions_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="start|center_vertical"
        android:padding="@dimen/pc_view_card_padding"
        android:background="@drawable/list_view_unselected"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/settingsButton"
            android:layout_width="@dimen/pc_view_toolbar_icon_button_size"
            android:layout_height="@dimen/pc_view_toolbar_icon_button_size"
            android:layout_marginEnd="@dimen/pc_view_section_spacing"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:scaleType="centerInside"
            android:src="@drawable/ic_settings"
            android:contentDescription="@string/title_activity_stream_settings"
            android:padding="@dimen/pc_view_loading_text_spacing"
            android:preferKeepClear="true" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/helpButton"
            android:layout_width="@dimen/pc_view_toolbar_icon_button_size"
            android:layout_height="@dimen/pc_view_toolbar_icon_button_size"
            android:layout_marginEnd="@dimen/pc_view_section_spacing"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:scaleType="centerInside"
            android:src="@drawable/ic_help"
            android:contentDescription="@string/help"
            android:padding="@dimen/pc_view_loading_text_spacing"
            android:preferKeepClear="true" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/customRemoteButton"
            android:layout_width="@dimen/pc_view_toolbar_icon_button_size"
            android:layout_height="@dimen/pc_view_toolbar_icon_button_size"
            android:layout_marginEnd="@dimen/pc_view_section_spacing"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:scaleType="centerInside"
            android:src="@drawable/ic_remote_panel"
            android:contentDescription="@string/custom_panel_title"
            android:padding="@dimen/pc_view_loading_text_spacing"
            android:preferKeepClear="true" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/manuallyAddPc"
            android:layout_width="@dimen/pc_view_toolbar_icon_button_size"
            android:layout_height="@dimen/pc_view_toolbar_icon_button_size"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:scaleType="centerInside"
            android:src="@drawable/ic_add"
            android:contentDescription="@string/add_pc_manually"
            android:padding="@dimen/pc_view_loading_text_spacing"
            android:preferKeepClear="true" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/pcFragmentContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/pc_view_section_spacing"
        android:background="@drawable/list_view_unselected"
        android:padding="@dimen/pc_view_card_padding"
        app:layout_constraintTop_toBottomOf="@id/actions_card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/no_pc_found_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ProgressBar
                android:id="@+id/pcs_loading"
                android:layout_width="@dimen/pc_view_loading_indicator_size"
                android:layout_height="@dimen/pc_view_loading_indicator_size"
                android:indeterminate="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/pc_view_loading_text_spacing"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="center"
                android:text="@string/searching_pc" />
        </LinearLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
